<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:contentDescription="@string/add"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/song"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumCover"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="309dp"
        android:layout_height="272dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/album_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/artist"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songName"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_pause"
        app:tint="#474747" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="323dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:progressTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_next"
        app:tint="#474747" />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_previous"
        app:tint="#474747" />

    <Button
        android:id="@+id/listsButton"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#00FFFFFF"
        android:text="@string/lists"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/songsButton"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="#00FFFFFF"
        android:text="@string/songs"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previousButton"
        app:layout_constraintVertical_bias="1.0" />

        <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/albumCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="#474747"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="268dp"
        android:layout_height="88dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/albumCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>